# runish

./: pyproject.toml
runish/: main.py
tests/: test_runish.py
